syntax = "proto3";

option csharp_namespace = "CardStorageServiceProtos";

//package CardStorageServiceProtos;

service ClientService{

	rpc Create(CreateClientRequest) returns (CreateClientResponse);

}

service CardSiervice{
	rpc GetByClientId (GetByClientIdRequest) returns (GetByClientIdResponse);
}

message CreateClientRequest{
	string Surname = 1;
	string FirstName = 2;
	string Patronymic = 3;
}

message CreateClientResponse{
	int32 ClientId = 1; 
}

message GetByClientIdRequest{

}

message GetByClientIdResponse{
	repeated Card Cards = 1;
}

message Card{
	string CardNo = 1;
	string Name = 2;
	string CVV2 = 3;
	string ExpDate = 4;
}